Fixed big logo overlap in auth screens

--- a/src/assets/scss/dashboard/_cards.scss
+++ b/src/assets/scss/dashboard/_cards.scss
@@ -42,6 +42,7 @@
 
   .big-card-logo {
     height: 125px;
+    max-width: 90%;
     margin: 5px;
   }
 
